--- a/08_24_cpp_study/08_24_cpp_study/08_24_cpp_study.vcxproj
+++ b/08_24_cpp_study/08_24_cpp_study/08_24_cpp_study.vcxproj
@@ -65,6 +65,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01.cpp" />
+    <ClCompile Include="MyTreacher.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyTreacher.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
