--- a/08_24_cpp_study/08_24_cpp_study/08_24_cpp_study.vcxproj.filters
+++ b/08_24_cpp_study/08_24_cpp_study/08_24_cpp_study.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="01.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="MyTreacher.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyTreacher.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
