--- a/09_07_cpp_study_4/09_07_cpp_study_4/09_07_cpp_study_4.vcxproj.filters
+++ b/09_07_cpp_study_4/09_07_cpp_study_4/09_07_cpp_study_4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="01.cpp">
+    <ClCompile Include="C:\Users\fengh\Desktop\01.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
