--- a/09_07_cpp_study_4/09_07_cpp_study_4/09_07_cpp_study_4.vcxproj
+++ b/09_07_cpp_study_4/09_07_cpp_study_4/09_07_cpp_study_4.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="C:\Users\fengh\Desktop\01.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A0A9D9CC-4294-44BB-8A03-CA5095387D55}</ProjectGuid>
     <RootNamespace>My09_07_cpp_study_4</RootNamespace>
@@ -63,9 +66,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="01.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
